<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fin_label"
            />
        <EditText
            android:id="@+id/fin_goal_title_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Financial Goal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text="@string/desc"
                />
            <EditText
                android:id="@+id/fin_goal_desc_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Description"/>
        </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/amount_label"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/fin_goal_amount_form"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Amount"
                    android:inputType="numberDecimal"/>

            </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/due_date_label"
                />

    <!--        <EditText-->
    <!--            android:id="@+id/fin_goal_deadline_form"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_gravity="end"-->
    <!--            android:ems="10"-->
    <!--            android:hint="@string/date_format"/>-->

            <DatePicker
                android:id="@+id/fin_goal_deadline_form"
                android:layout_width="235dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_label"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <Button
                android:id="@+id/daily_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_daily"/>
            <Button
                android:id="@+id/weekly_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_weekly"/>
            <Button
                android:id="@+id/monthly_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_monthly"/>
            <Button
                android:id="@+id/annually_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_annually"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/add_fin_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/add_the_goal"/>
        </FrameLayout>

    </LinearLayout>

</ScrollView>


