<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id = "@+id/detail_container">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trans_label"
            />
        <EditText
            android:id="@+id/detail_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:hint="@string/trans_label"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/trans_type"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="end">
        <Button
            android:id="@+id/detail_trans_deposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:hint="@string/deposit"
            />
            <Button
                android:id="@+id/detail_trans_spending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:hint="@string/spending"
                />
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:clickable="false">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:gravity="center"
                android:text="@string/amount_label" />
            <EditText
                android:id="@+id/trans_current_amount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:hint="0.00"/>
        </FrameLayout>
        <Button
            android:id="@+id/detail_trans_deadline"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            tools:text="FEB 08, 2020 12:12:00"/>
        <Button
            android:id="@+id/detail_trans_edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"/>

        <Button
            android:id="@+id/detail_trans_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"/>
    </LinearLayout>
</FrameLayout>