<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"

    >
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fin_label"
            />
        <EditText
            android:id="@+id/detail_fin_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:hint="@string/fin_label"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            />
        <EditText
            android:id="@+id/detail_fin_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:hint="@string/desc"
            />
        <Button
            android:id="@+id/detail_fin_deadline"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            tools:text="FEB 08, 2020 12:12:00"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:gravity="center">
<!--            <EditText-->
<!--                android:id="@+id/detail_fin_start"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@null"-->
<!--                tools:text="0"/>-->
                <EditText
                    android:id="@+id/current_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/black"
                    android:hint="0.00"
                    android:inputType="numberDecimal"/>

<!--            <EditText-->
<!--                android:id="@+id/detail_fin_end"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@null"-->
<!--                tools:text="42"/>-->
        </LinearLayout>

        <ProgressBar
            android:id="@+id/detail_fin_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:progressBackgroundTint="@color/cardview_dark_background"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:text="Repeat:"/>
        <Spinner
            android:id="@+id/repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="10dp"
            android:background="@color/box_background"
            android:textAlignment="center"
            android:entries="@array/repeat_list"/>
<!--        <Button-->
<!--            android:id="@+id/detail_fin_add_money"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/add_money"/>-->

        <Button
            android:id="@+id/detail_fin_edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"/>

        <Button
            android:id="@+id/detail_fin_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"/>
    </LinearLayout>
</FrameLayout>

</ScrollView>